# lib_opencad

./: .gitignore  CMakeLists.txt  LICENSE  README.md  opencad.h
apps/: CMakeLists.txt  cadinfo.cpp
cmake/: FindAnyProject.cmake  FindExtGTest.cmake  FindExtProject.cmake  JSONParser.cmake  PackageConfig.cmake.in  util.cmake
lib/: CMakeLists.txt  cadfileio.h  cadfilestreamio.cpp  cadgeometry.cpp  cadgeometry.h  cadheader.cpp  cadheader.h  cadlayer.cpp  cadobjects.cpp  cadobjects.h  cadtables.cpp  opencad.h
lib/dwg/: CMakeLists.txt  io.cpp  io.h  r2000.cpp  r2000.h
tests/: CMakeLists.txt  io_check.cpp
